fix daily top alert white space

--- a/source/DailyOverview/DailyStyles.css
+++ b/source/DailyOverview/DailyStyles.css
@@ -15,6 +15,7 @@
     margin-bottom: 15px;
     padding: 20px;
     position: absolute;
+    top: 0;
     right: 0px;
     z-index: 1;
 }
